--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,11 @@ parameters:
 #    parameter_name: value
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+  AppBundle\:
+    resource: '../../src/AppBundle/*'
+    exclude: '../../src/AppBundle/{Entity,Repository,Tests}'
+
+  AppBundle\Controller\:
+    resource: '../../src/AppBundle/Controller'
+    public: true
+    tags: ['controller.service_arguments']
