--- a/composer.json
+++ b/composer.json
@@ -18,35 +18,21 @@
     },
     "require": {
         "php": ">=5.5.9",
-        "symfony/symfony": "3.4.*",
-        "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.6",
-        "doctrine/doctrine-cache-bundle": "^1.2",
-        "symfony/swiftmailer-bundle": "^2.3",
-        "symfony/monolog-bundle": "^2.8",
-        "symfony/polyfill-apcu": "^1.0",
-        "sensio/distribution-bundle": "^5.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "symfony/symfony": "^4.0",
+        "doctrine/orm": "^2.7.5",
+        "doctrine/doctrine-bundle": "^1.10",
+        "doctrine/doctrine-cache-bundle": "^1.4",
+        "symfony/monolog-bundle": "^3.5",
+        "sensio/framework-extra-bundle": "^3.0",
+        "monolog/monolog": "^1.22"
     },
     "require-dev": {
-        "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "3.4.*"
+        "symfony/phpunit-bridge": "4.0.*"
     },
     "scripts": {
-        "symfony-scripts": [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
-        ],
         "post-install-cmd": [
-            "@symfony-scripts"
         ],
         "post-update-cmd": [
-            "@symfony-scripts"
         ]
     },
     "extra": {
