--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "saro0h/to-do-list",
+    "description": "Mise à niveau d'un view projet symfony (P8)",
     "license": "proprietary",
     "type": "project",
     "autoload": {
