--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,9 @@
         "symfony/validator": "^5.2",
         "symfony/mailer": "^5.2",
         "symfony/form": "^5.2",
-        "symfony/yaml": "^5.2"
+        "symfony/yaml": "^5.2",
+        "phpunit/phpunit": "^8.5",
+        "symfony/browser-kit": "^5.2"
     },
     "conflict": {
         "symfony/symfony": "*"
@@ -46,8 +48,7 @@
         "symfony/maker-bundle": "^1.30",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/stopwatch": "^5.2",
-        "symfony/web-profiler-bundle": "^5.0",
-        "phpunit/phpunit": "^8.5"
+        "symfony/web-profiler-bundle": "^5.0"
     },
     "scripts": {
         "post-install-cmd": [
